new changes in code

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>karpagam</title>
     <link rel = "stylesheet" href = "dayNight.css">
 </head>
 <body>
     <div><button>😎</button></div>
-    <h1>I am a demo of day and night</h1>
+    <h1>I am a demo of day and night hi hello</h1>
     <script src = "dayNight.js"></script>
 </body>
 </html>
